--- a/Dictly/VoiceDictation.entitlements
+++ b/Dictly/VoiceDictation.entitlements
@@ -4,9 +4,9 @@
 <dict>
 	<key>com.apple.security.files.user-selected.read-write</key>
 	<true/>
-	<key>com.apple.security.temporary-exception.files.home-relative-path.read-write</key>
+	<key>com.apple.security.temporary-exception.files.home-relative-path.read-only</key>
 	<array>
-		<string>.ssh/</string>
+		<string>/.ssh/</string>
 	</array>
 </dict>
 </plist>
