--- a/Dictly/VoiceDictation.entitlements
+++ b/Dictly/VoiceDictation.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.files.user-selected.read-write</key>
 	<true/>
-	<key>com.apple.security.temporary-exception.files.home-relative-path.read-only</key>
+	<key>com.apple.security.temporary-exception.files.home-relative-path.read-write</key>
 	<array>
 		<string>/.ssh/</string>
 	</array>
